Ajustes iniciais para OT-Noo

--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -1,8 +1,8 @@
 # Mariadb
-MYSQL_DATABASE=otservbr-global
+MYSQL_DATABASE=ot-noo
 MYSQL_USER=canary
 MYSQL_PASSWORD=canary
-MYSQL_ROOT_PASSWORD=root
+MYSQL_ROOT_PASSWORD=ot-noo
 
 # Login
 LOGIN_HTTP_PORT=8080
